--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "misskey",
-	"version": "13.13.2",
+	"version": "13.13.2-miyaco-1",
 	"codename": "nasubi",
 	"repository": {
 		"type": "git",
